move some files

--- a/jsTestDriver.conf
+++ b/jsTestDriver.conf
@@ -1,9 +1,9 @@
 server: http://localhost:4224
 
 load:
-  - project/require_test_config.js
+  - config.js
   - project/require.js
-  - project/require_test_case.js
+  - requireTestCase.js
 test:
   - project/test/*.js
 serve:
